src/styles/global.scss
/* ... */
div.separator {
  border-top: 1px solid $text;
  width: 70%;
  margin: auto;
}

span.icon {
  &.open {
    transform: rotate(-180deg);
    transition: 0.35s;
  }
  transition: 0.35s;
}

@import '../../node_modules/bulma/sass/base/all';
@import '../../node_modules/bulma/sass/utilities/all';
@import '../../node_modules/bulma/sass/components/navbar';
@import '../../node_modules/bulma/sass/elements/container';
@import '../../node_modules/bulma/sass/elements/content';
@import '../../node_modules/bulma/sass/elements/icon';
@import '../../node_modules/bulma/sass/elements/image';
@import '../../node_modules/bulma/sass/elements/notification';
@import '../../node_modules/bulma/sass/elements/other';
@import '../../node_modules/bulma/sass/elements/table';
@import '../../node_modules/bulma/sass/elements/title';
@import '../../node_modules/bulma/sass/form/all';
@import '../../node_modules/bulma/sass/grid/all';
@import '../../node_modules/bulma/sass/helpers/all';
@import '../../node_modules/bulma/sass/layout/footer';
@import '../../node_modules/bulma/sass/layout/section';
@import '../../node_modules/bulma/sass/helpers/flexbox';
@import '../../node_modules/bulma/sass/helpers/visibility';

@import '../../node_modules/bulma/bulma';
@import '../../node_modules/@creativebulma/bulma-collapsible';

.custom-accordion {
  .message {
    margin-bottom: 0.5rem;
  }
  .message a,
  .message a.message-header {
    color: $link !important;
    font-weight: normal;
  }
  .message-header {
    background-color: #f5f5f5;
    border: 1px solid #ddd;
    border-radius: 4px;
    &.is-active {
      border-radius: 4px 4px 0 0;
    }
  }
  .message-body {
    border-width: 0;
    background-color: $body-background-color;
    &.is-active {
      border-width: 0 1px 1px;
      border-radius: 0 0 4px 4px;
    }
  }
}

.color-primary {
  color: $primary !important;
}
.color-link {
  color: $link !important;
}
.color-white {
  color: #fff;
  &:hover {
    color: #fcf798;
  }
}

.download-button {
  color: $link;
  border: 2px solid $link;
  padding: 35px 20px;
  border-radius: 5px;
  &:hover {
    background-color: $link;
    color: $background;
  }
}

figure.image {
  &.rounded-border img {
    border-radius: 5px;
  }
  &.is-150x150 {
    height: 150px !important;
    width: 150px !important;
  }

  &.no-responsive > img {
    width: unset !important;
  }
}

.control.checkboxes {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: auto auto;
  grid-template-columns: auto auto;
  grid-column-gap: 1rem;
  grid-row-gap: 0.25rem;
}
.has-text-uppercase {
  text-transform: uppercase;
}

#creativecommons {
  font-size: 0.75rem;
  display: none;
  &.is-open {
    display: block;
  }
}

.near-columns {
  .column {
    padding-bottom: 0 !important;
  }
}

/* Tooltip */
.tooltip {
  position: relative;
  display: inline-block;
  .tooltip-content {
    visibility: hidden;
    width: max-content;
    max-width: 300px;
    background-color: #fff;
    border: 1px solid #acacac;
    color: $text;
    border-radius: 2px;

    /* Position the tooltip text - see examples below! */
    position: absolute;
    z-index: 1;
    top: 100%;
    left: 0;
    &.isLeft {
      right: 0;
      left: unset;
    }
  }
  &:hover .tooltip-content {
    visibility: visible;
    .tooltip-header {
      background-color: #f5f5f5;
    }
    .tooltip-header,
    .tooltip-body {
      padding: 10px;
    }
  }
}
a.image.cc {
  width: 80px;
}

#notifications {
  position: fixed;
  top: 0;
  left: 1rem;
  right: 1rem;
  z-index: 99;

  & > .notification {
    margin-top: 15px;
  }
}

.cookie-message {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 99;
  padding: 2rem;
  background: rgba(0, 0, 0, 0.9);
  @include desktop {
    display: flex;
  }
  .left {
    margin: 5px 0;
    flex: 1;
  }
  .right {
    width: 200px;
    margin: 5px 0;
  }
}
.privacycolor {
  color: #9e9e9e;
}

.archived-link {
  display: flex;
  margin: 10px 0;
  a.external-link {
    width: 100px;
    height: 100px;
    margin: 0 0.5rem 0 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background: #f2f2f2;
//    color: $primary;
    color: #df011b;
    font: {
      size: 2rem;
      weight: 700;
    }
    text-align: center;
    border-radius: 8px;
    transition: background .3s;
    text-decoration: none;
    &:hover {
      background: $dark-bg-color;
      color: white;
    }
  }
}

.toggle-button {
  padding: 5px !important;
  font-size: 0.6rem !important;
}
label.label.not-default,
span.not-default {
  width: fit-content;
  background-color: #f0eab9;
}

.is-relative {
  position: relative;
}
.top-anat-species {
  height: 60px !important;
  width: 70px !important;
  margin-left: auto;
  margin-right: auto;
}

.gene-species {
  width: 500px;
  cursor: pointer;
  &:hover {
    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.2);
  }
}

.go-top {
  position: fixed;
  bottom: 50px;
  right: 50px;
  background-color: #fff !important;
  border-width: 3px;
  &:hover,
  &:active,
  &:focus {
    color: $primary !important;
  }
}
.dot-line {
  border-top: 2px dotted $primary;
  width: 2rem;
}

.gap-cluster {
  border-top: 2px dotted $primary;
}
.button-species-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}
.button-species {
  max-width: 180px;
  border-radius: 15px;
  border: 1px solid $primary;
  flex: 1;
  height: 100%;
  padding: 15px;
  text-align: center;
  cursor: pointer;
}
.card-image.auto-center-100 figure.image {
  margin-left: 0;
  margin-right: 0;
}
a.youtube-preview-image img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}
img[src*="#tutoimgborder"] {
  border: 1px solid #363636;
}

@media only screen and (max-width: 600px) {
  .tablet-flex-direction-column {
    flex-direction: column-reverse !important;
    & > * {
      margin: 5px 0;
    }
  }
}
/* ... */

